[package]
name = "asymmetric-db"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
dotenv = { version = "0.15.0", features = ["clap"] }
serde = { version = "1.0.215", features = ["derive"] }
surrealdb = "2.0.4"
tokio = { version = "1.41.1", features = ["full"] }
